--- a/ConsoleRunner/ConsoleRunner.csproj
+++ b/ConsoleRunner/ConsoleRunner.csproj
@@ -6,13 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="4.5.0-rc04" />
-    <PackageReference Include="NLog.Config" Version="4.5.0-rc04" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
+    <PackageReference Include="NLog" Version="4.5.6" />
+    <PackageReference Include="NLog.Config" Version="4.5.6" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SharpBoy\SharpBoy.csproj" />
+    <ProjectReference Include="..\SharpBoy\DotBoy.csproj" />
   </ItemGroup>
 
 </Project>
