--- a/dotBoy.Tests/DotBoy.Tests.csproj
+++ b/dotBoy.Tests/DotBoy.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SharpBoy\DotBoy.csproj" />
+    <ProjectReference Include="..\dotBoy\DotBoy.csproj" />
   </ItemGroup>
 
 </Project>
