--- a/ConsoleRunner/ConsoleRunner.csproj
+++ b/ConsoleRunner/ConsoleRunner.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.2.1" />
     <PackageReference Include="NLog" Version="4.5.6" />
     <PackageReference Include="NLog.Config" Version="4.5.6" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
