--- a/dotBoy.Tests/DotBoy.Tests.csproj
+++ b/dotBoy.Tests/DotBoy.Tests.csproj
@@ -13,4 +13,8 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\dotBoy.Core\dotBoy.Core.csproj" />
+  </ItemGroup>
+
 </Project>
